--- a/lab01/docs/10-analysis.tex
+++ b/lab01/docs/10-analysis.tex
@@ -72,6 +72,8 @@
 
 \section{Исходные данные варианта 6}
 
+\begingroup
+\renewcommand*{\arraystretch}{0.6}
 \begin{equation}
 	C = \begin{bmatrix}
 		10 &  8 &  6 &  4 &  9 \\
@@ -81,3 +83,4 @@
 		 8 & 10 & 11 &  8 &  7 \\
 	\end{bmatrix}
 \end{equation}
+\endgroup
