--- a/lab01/docs/40-research.tex
+++ b/lab01/docs/40-research.tex
@@ -11,3 +11,31 @@
 
 
 \chapter{Исследовательский раздел}
+
+\section{Результаты расчётов для задач из индивидуального варианта}
+
+\subsection{Минимизация}
+
+\begin{verbatim}
+	Оптимальное решение: X* =
+	     0     0     1     0     0
+	     0     0     0     1     0
+	     0     0     0     0     1
+	     1     0     0     0     0
+	     0     1     0     0     0
+
+	f* = 28
+\end{verbatim}
+
+\subsubsection{Максимизация}
+
+\begin{verbatim}
+	Оптимальное решение: X* =
+	     0     0     0     0     1
+	     1     0     0     0     0
+	     0     0     0     1     0
+	     0     1     0     0     0
+	     0     0     1     0     0
+
+	f* = 48
+\end{verbatim}
