--- a/lab01/docs/20-design.tex
+++ b/lab01/docs/20-design.tex
@@ -33,3 +33,57 @@
 
 
 \chapter{Конструкторский раздел}
+
+\section{Краткое описание венгерского метода}
+
+\begin{algorithm}[H]
+	\caption{Венегрский метод решения задачи о назначениях}
+	\label{lst:euclidean-clustering}
+	\small
+	\begin{algorithmic}[1]
+		\State \textbf{Начало}
+		\State Из каждого столбца матрицы назначения вычитаем его min элемент \label{prepare-begin}
+		\State Из каждой строки матрицы назначения вычитаем её min элемент
+		\State Строим начальную СНН: просм. ст-цы тек. м-цы ст-тей (в порядке возр-я номера ст-ца) сверху вниз.
+		Первый в стр. нуль, в одной стр. с кот. нет 0*, отмечаем 0* \label{prepare-end}
+		\State $k \coloneqq |\text{СНН}|$ \label{main-begin}
+		\If{$k = n$} \label{label1}
+			\State Записываем оптимальное решение:
+			\begin{equation}
+				x_{ij}^* \coloneqq \begin{cases}
+					1, \text{ если в позиции } $(i, j)$ \text{ м-цы ст-тей стоит 0*,}\\
+					0, \text{ иначе}
+				\end{cases}
+			\end{equation}
+			\State $f^* \coloneqq f(X^*)$
+			\State Вывод $X^*, f^*$
+			\State \textbf{Конец}
+		\Else
+			\State Столбцы с 0* отмечаем "+"
+			\If{Среди невыделенных элементов есть 0} \label{label2}
+				\State Отмечаем его 0'
+				\If{В одной строке с текущим 0' есть 0*}
+					\State{Снимаем выделение со столбца с этим 0*, выделяем "+" стр. с тек. 0'}
+					\State \Goto{label2}
+				\Else
+					\State Строим непродолж. $L$-цеп.: от тек. 0' по ст-цу в 0* по стр. $\ldots$ по стр. в 0'
+					\State В пределах $L$-цепочки: $0^* \longmapsto 0; \;\; 0' \longmapsto 0^*$
+					\State Снимаем все выделения, $k \coloneqq |\text{СНН}|$
+					\State \Goto{label1}
+				\EndIf
+			\Else
+				\State Ищем $h$ — min элемент среди невыделенных
+				\State Вычитаем $h$ из невыд. столбцов, добавляем $h$ к выд. стркокам.
+				\State \Goto{label2}
+			\EndIf
+		\EndIf \label{main-end}
+	\end{algorithmic}
+\end{algorithm}
+
+Шаги алгоритма с \ref{prepare-begin} по \ref{prepare-end} называются подготовительным этапом, с \ref{main-begin} по \ref{main-end} — основным этапом.
+
+Задача о назначениях для максимизации стоимости сводится к существующему алгоритму минимизации стоимости заменой целевой функции на
+\begin{equation}
+	f_2(x) = \sum_{i=1}^{n} \sum_{j=1}^n (M - c_{ij})x_{ij} \to \min,
+\end{equation}
+где $\displaystyle M = \max_{i, j = \overline{1, n}}\{ c_{ij} \}$.
