--- a/lab01/docs/30-engineering.tex
+++ b/lab01/docs/30-engineering.tex
@@ -19,3 +19,10 @@
 
 
 \chapter{Технологический раздел}
+
+\section{Листинг программы}
+
+\lstinputlisting[
+	caption={\code{lab01.m}},
+	label={lst:lab01m},
+]{../lab01.m}
