--- a/lab01/docs/report.tex
+++ b/lab01/docs/report.tex
@@ -92,7 +92,7 @@
 \include{40-research}
 \end{MainPart}
 
-\include{90-conclusion}
+%\include{90-conclusion}
 %\include{91-references}
 %\include{92-attachments}
 
