--- a/lab01/docs/40-research.tex
+++ b/lab01/docs/40-research.tex
@@ -27,7 +27,7 @@
 	f* = 28
 \end{verbatim}
 
-\subsubsection{Максимизация}
+\subsection{Максимизация}
 
 \begin{verbatim}
 	Оптимальное решение: X* =
