--- a/lab01/docs/10-analysis.tex
+++ b/lab01/docs/10-analysis.tex
@@ -32,7 +32,7 @@
 \subsection{Содержательная постановка}
 
 В распоряжении работодателя имеется $n$ работ и $n$ исполнителей.
-Стоимость выполнения $i$ работы $j$ исполнителем составляет $c_{ij} > 0$ единиц.
+Стоимость выполнения $i$-й работы $j$-м исполнителем составляет $c_{ij} \geqslant 0$ единиц.
 
 \begin{itemize}
 	\item Требуется распределить все работы по исполнителям так, чтобы каждый исполнитель выполнял ровно 1 работу.
@@ -43,7 +43,7 @@
 
 Обозначим за матрицу стоимостей
 \begin{equation}
-	C = (c_{ij}), \quad i,j=\overline{1,n}
+	C = (c_{ij}), \quad i, j = \overline{1, n}.
 \end{equation}
 
 Введём так называемые управляемые переменные:
@@ -63,10 +63,10 @@
 Математическая постановка задачи о назначениях:
 \begin{equation}
 	\begin{dcases}
-		f(x) = \sum_{i=1}^{n} \sum_{j=1}^n c_{ij}x_{ij} \to \min, \\
-		\sum_{i=1}^{n} x_{ij} = 1, \quad j =\overline{1, n}, \\
-		\sum_{j=1}^{n} x_{ij} = 1, \quad i =\overline{1, n}, \\
-		x_{ij} \in \{0, 1\}, \quad i, j = \overline{1, n}. \\
+		f(x) = \sum_{i=1}^{n} \sum_{j=1}^n c_{ij}x_{ij} & \to \min, \\
+		\sum_{i=1}^{n} x_{ij} = 1, & j = \overline{1, n}, \\
+		\sum_{j=1}^{n} x_{ij} = 1, & i = \overline{1, n}, \\
+		x_{ij} \in \{0, 1\}, & i, j = \overline{1, n}. \\
 	\end{dcases}
 \end{equation}
 
