--- a/lab01/docs/20-design.tex
+++ b/lab01/docs/20-design.tex
@@ -37,7 +37,7 @@
 \section{Краткое описание венгерского метода}
 
 \begin{algorithm}[H]
-	\caption{Венегрский метод решения задачи о назначениях}
+	\caption{Венгерский метод решения задачи о назначениях}
 	\label{lst:euclidean-clustering}
 	\small
 	\begin{algorithmic}[1]
@@ -45,7 +45,7 @@
 		\State Из каждого столбца матрицы назначения вычитаем его min элемент \label{prepare-begin}
 		\State Из каждой строки матрицы назначения вычитаем её min элемент
 		\State Строим начальную СНН: просм. ст-цы тек. м-цы ст-тей (в порядке возр-я номера ст-ца) сверху вниз.
-		Первый в стр. нуль, в одной стр. с кот. нет 0*, отмечаем 0* \label{prepare-end}
+		Первый в ст-це нуль, в одной стр. с кот. нет 0*, отмечаем 0* \label{prepare-end}
 		\State $k \coloneqq |\text{СНН}|$ \label{main-begin}
 		\If{$k = n$} \label{label1}
 			\State Записываем оптимальное решение:
