--- a/lab01/docs/20-design.tex
+++ b/lab01/docs/20-design.tex
@@ -42,8 +42,8 @@
 	\small
 	\begin{algorithmic}[1]
 		\State \textbf{Начало}
-		\State Из каждого столбца матрицы назначения вычитаем его min элемент \label{prepare-begin}
-		\State Из каждой строки матрицы назначения вычитаем её min элемент
+		\State Из каждого столбца матрицы стоимостей вычитаем его min элемент \label{prepare-begin}
+		\State Из каждой строки матрицы стоимостей вычитаем её min элемент
 		\State Строим начальную СНН: просм. ст-цы тек. м-цы ст-тей (в порядке возр-я номера ст-ца) сверху вниз.
 		Первый в ст-це нуль, в одной стр. с кот. нет 0*, отмечаем 0* \label{prepare-end}
 		\State $k \coloneqq |\text{СНН}|$ \label{main-begin}
