--- a/lab01/docs/preamble.tex
+++ b/lab01/docs/preamble.tex
@@ -462,9 +462,8 @@
 	basicstyle         = \scriptsize\ttfamily,
 	breakatwhitespace  = true,
 	breaklines         = true,
-	escapechar         = ",
-	frame=single,
-	inputencoding=utf8/koi8-r,
+	frame              = single,
+	inputencoding      = utf8/koi8-r,
 	mlshowsectionrules = true,
 	numbers            = left,
 	numbersep          = 5pt,
