--- a/sem10/lab04/docs/report.tex
+++ b/sem10/lab04/docs/report.tex
@@ -47,9 +47,9 @@
 	\begin{tabular}{|l|l|l|l|l|}
 		\hline
 		№ п/п & $\varepsilon$ & $N$  & $x^*$          & $f(x^*)$        \\ \hline
-		$1$   & $10^{-2}$     & $15$ & $0,4774047325$ & $-1,4738017976$ \\ \hline
-		$2$   & $10^{-4}$     & $20$ & $0,4823683107$ & $-1,4738932752$ \\ \hline
-		$3$   & $10^{-6}$     & $25$ & $0,4824178114$ & $-1,4738932844$ \\ \hline
+		$1$   & $10^{-2}$     & $11$ & $0,4774047325$ & $-1,4738017976$ \\ \hline
+		$2$   & $10^{-4}$     & $14$ & $0,4823683107$ & $-1,4738932752$ \\ \hline
+		$3$   & $10^{-6}$     & $17$ & $0,4824178114$ & $-1,4738932844$ \\ \hline
 	\end{tabular}
 \end{table}
 
@@ -57,12 +57,12 @@
 	\caption{Сводная таблица для сравнения методов, $\varepsilon = 10^{-6}$}
 	\begin{tabular}{|l|l|l|l|l|}
 		\hline
-		№ п/п & Метод                    & $N$  & $x^*$          & $f(x^*)$        \\ \hline
-		$1$   & поразрядного поиска      & $50$ & $0,4824180651$ & $-1,4738932844$ \\ \hline
-		$2$   & золотого сечения         & $31$ & $0,4824184749$ & $-1,4738932844$ \\ \hline
-		$3$   & парабол                  & $15$ & $0,4824178751$ & $-1,4738932844$ \\ \hline
-		$4$   & Ньютона модифицированный & $25$ & $0,4824178114$ & $-1,4738932844$ \\ \hline
-		$5$   & Функция fminbnd          & $10$ & $0,4824181903$ & $-1,4738932844$ \\ \hline
+		№ п/п & Метод               & $N$  & $x^*$          & $f(x^*)$        \\ \hline
+		$1$   & поразрядного поиска & $50$ & $0,4824180651$ & $-1,4738932844$ \\ \hline
+		$2$   & золотого сечения    & $31$ & $0,4824184749$ & $-1,4738932844$ \\ \hline
+		$3$   & парабол             & $15$ & $0,4824178751$ & $-1,4738932844$ \\ \hline
+		$4$   & Ньютона             & $17$ & $0,4824178114$ & $-1,4738932844$ \\ \hline
+		$5$   & Функция fminbnd     & $10$ & $0,4824181903$ & $-1,4738932844$ \\ \hline
 	\end{tabular}
 \end{table}
 
